--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path_provider: ^2.1.2
   intl: ^0.19.0
   uuid: ^4.3.3
+  flutter_colorpicker: ^1.1.0
 
 dev_dependencies:
   flutter_test:
