--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   intl: ^0.19.0
   uuid: ^4.3.3
   flutter_colorpicker: ^1.1.0
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
