--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_colorpicker: ^1.1.0
   provider: ^6.1.5
   flutter_launcher_icons: ^0.14.3
+  webview_flutter: ^4.13.0
 
 dev_dependencies:
   flutter_test:
