--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   provider: ^6.1.5
   flutter_launcher_icons: ^0.14.3
   webview_flutter: ^4.13.0
+  connectivity_plus: ^6.1.4
 
 dev_dependencies:
   flutter_test:
